# 1.semester_SL

./: .gitignore
00_intro/: getgoogle.sh  paymentiframe.html  poatry.txt
02_text-based_data_Format/: me.csv  me.json  me.txt  me.xml  me.yaml
03_Moduels/html_esmodules/: index.html  index.js  myMaduel.js
03_Moduels/htmlclassic/: index.html  index.js  myMaduel.js
03_Moduels/node_commonjs/: index.js
03_Moduels/node_esmoduel/: myModule.js
03_Moduels/python_main/: library_importer.py  potential_library.py
04_Encode_Decode/01_node/: index.js
04_Encode_Decode/02_python/: main.py
05_python_virtual_environments/: main.py
06_simple_Servers/01_node/: app.js  node.txt  package-lock.json
06_simple_Servers/02_python/: main.py  poetry.txt  pyproject.toml
06_simple_Servers/03_test/: app.js  package.json
08_Server-Server/: 00_server_stuff.txt
08_Server-Server/01_node/: app.js  package-lock.json  package.json
08_Server-Server/02_python/: main.py  pyproject.toml
09_Envirement_vairiables/01_node/: index.js
09_Envirement_vairiables/02_python/: main.py  pyproject.toml
10_date/01_node/: index.js
10_date/02_python/: main.py
11_short_polling/01_node/: app.js
12_Long_Polling/01_node/: app.js
13_Server-send_events/02_python/: main.py  pyproject.toml
17_Database_Migrations/: 20250403101413_mro_migration.js  docker-compose.yml  mysqldump.sql  pgdump.sql
18_CORS/: index.html
19_Multipart_Forms/: index.html
20_Base64_Images/: index.html
21_Audio/: index.html
22_MPEG-DASH/: app.js  package.json
23_Embedded_Youtube/: embeted.html
(+39 files in other folders)
