[project]
name = "02-python"
version = "0.0.1"
description = "working with envirement variables in py"
authors = [
    {name = "Mikkel sandell",email = "mikkelsandell@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
